[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Pintor/veio_pintor_default.png" type="Texture" id=1]
[ext_resource path="res://Assets/Borboleta/borboleto_default.png" type="Texture" id=2]
[ext_resource path="res://Assets/girafa/leao_e_girafa_default.png" type="Texture" id=3]
[ext_resource path="res://Assets/Passarinho/passarinho_do_mal_default.png" type="Texture" id=4]
[ext_resource path="res://Assets/Interface/fundo.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Main_Menu_interface.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Fundo.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Interface/Kenney High Square.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Scripts/Botoes_Dificuldade/Dificuldades_Interface.gd" type="Script" id=9]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 422, 230 )
margin_left = 10.0
margin_right = 10.0
margin_top = 10.0
margin_bottom = 10.0
modulate_color = Color( 0.752941, 0.752941, 0.752941, 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 422, 230 )
margin_left = 8.0
margin_right = 8.0
margin_top = 8.0
margin_bottom = 8.0
modulate_color = Color( 0.458824, 0.458824, 0.458824, 1 )

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 422, 230 )
margin_left = 10.0
margin_right = 10.0
margin_top = 10.0
margin_bottom = 15.0

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = ExtResource( 8 )

[node name="Menu_Escolha" type="Node2D"]
script = ExtResource( 6 )

[node name="Fundo" parent="." instance=ExtResource( 7 )]

[node name="Interface_Niveis" type="Control" parent="."]
margin_left = 350.0
margin_top = 5.0
margin_right = 2272.0
margin_bottom = 1081.0

[node name="Button_Pintor" type="Button" parent="Interface_Niveis"]
margin_left = 560.0
margin_top = 100.0
margin_right = 960.0
margin_bottom = 450.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )

[node name="VeioPintorDefault" type="Sprite" parent="Interface_Niveis/Button_Pintor"]
position = Vector2( 202, 169 )
scale = Vector2( 0.499478, 0.499478 )
texture = ExtResource( 1 )

[node name="Button_Passarinho" type="Button" parent="Interface_Niveis"]
margin_left = 1041.0
margin_top = 100.0
margin_right = 1441.0
margin_bottom = 450.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )

[node name="VeioPintorDefault" type="Sprite" parent="Interface_Niveis/Button_Passarinho"]
position = Vector2( 202, 169 )
scale = Vector2( 0.499478, 0.499478 )
texture = ExtResource( 4 )

[node name="Button_Girafa" type="Button" parent="Interface_Niveis"]
margin_left = 560.0
margin_top = 580.0
margin_right = 960.0
margin_bottom = 930.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )

[node name="VeioPintorDefault" type="Sprite" parent="Interface_Niveis/Button_Girafa"]
position = Vector2( 202, 169 )
scale = Vector2( 0.499478, 0.499478 )
texture = ExtResource( 3 )

[node name="Button_Borboleta" type="Button" parent="Interface_Niveis"]
margin_left = 1040.0
margin_top = 580.0
margin_right = 1440.0
margin_bottom = 930.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )

[node name="VeioPintorDefault" type="Sprite" parent="Interface_Niveis/Button_Borboleta"]
position = Vector2( 202, 169 )
scale = Vector2( 0.499478, 0.499478 )
texture = ExtResource( 2 )

[node name="Dificuldades" type="Control" parent="."]
margin_right = 894.0
margin_bottom = 1079.0
script = ExtResource( 9 )

[node name="Facil" type="Button" parent="Dificuldades"]
margin_left = 78.0
margin_top = 500.0
margin_right = 378.0
margin_bottom = 600.0
custom_colors/font_color = Color( 0.00392157, 0.501961, 0.0941176, 1 )
custom_fonts/font = SubResource( 4 )
toggle_mode = true
text = "Fácil"

[node name="Medio" type="Button" parent="Dificuldades"]
margin_left = 74.0
margin_top = 650.0
margin_right = 374.0
margin_bottom = 750.0
custom_colors/font_color = Color( 0.933333, 1, 0.133333, 1 )
custom_fonts/font = SubResource( 5 )
toggle_mode = true
text = "Médio"

[node name="Dificil" type="Button" parent="Dificuldades"]
margin_left = 76.0
margin_top = 800.0
margin_right = 376.0
margin_bottom = 900.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
toggle_mode = true
text = "Difícil"

[connection signal="pressed" from="Interface_Niveis/Button_Pintor" to="." method="_on_Button_Pintor_pressed"]
[connection signal="pressed" from="Interface_Niveis/Button_Passarinho" to="." method="_on_Button_Passarinho_pressed"]
[connection signal="pressed" from="Interface_Niveis/Button_Girafa" to="." method="_on_Button_Girafa_pressed"]
[connection signal="pressed" from="Interface_Niveis/Button_Borboleta" to="." method="_on_Button_Borboleta_pressed"]
